remove example folder, not needed

--- a/teaser_example.ipynb
+++ b/teaser_example.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "project output path: /Users/nlong/working/urban-analysis/teaser_usa/output/example\n"
+      "project output path: /Users/nlong/working/urban-analysis/teaser_usa/output\n"
      ]
     }
    ],
@@ -25,7 +25,7 @@
     "    Path.mkdir(output_dir, parents=True, exist_ok=True)\n",
     "output_dir = output_dir.absolute()\n",
     "\n",
-    "output_proj_dir = output_dir / \"example\"\n",
+    "output_proj_dir = output_dir\n",
     "if not output_proj_dir.exists():\n",
     "    Path.mkdir(output_proj_dir, parents=True, exist_ok=True)\n",
     "\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -45,16 +45,16 @@
      "output_type": "stream",
      "text": [
       "Exports can be found here:\n",
-      "/Users/nlong/working/urban-analysis/teaser_usa/output/example/Project_1\n"
+      "/Users/nlong/working/urban-analysis/teaser_usa/output/Project_1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'/Users/nlong/working/urban-analysis/teaser_usa/output/example/Project_1'"
+       "'/Users/nlong/working/urban-analysis/teaser_usa/output/Project_1'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "Exports can be found here:\n",
-      "/Users/nlong/working/urban-analysis/teaser_usa/output/example/Project_2\n"
+      "/Users/nlong/working/urban-analysis/teaser_usa/output/Project_2\n"
      ]
     },
     {
@@ -111,10 +111,10 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/nlong/working/urban-analysis/teaser_usa/output/example/Project_2'"
+       "'/Users/nlong/working/urban-analysis/teaser_usa/output/Project_2'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
